--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,14 @@ dist.dir=dist
 dist.jar=${dist.dir}/WeightWatchApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcommon-1.0.0.jar=C:\\Users\\ESIC\\Downloads\\jfreechart-1.0.1\\jfreechart-1.0.1\\lib\\jcommon-1.0.0.jar
+file.reference.jfreechart-1.0.1.jar=C:\\Users\\ESIC\\Downloads\\jfreechart-1.0.1\\jfreechart-1.0.1\\lib\\jfreechart-1.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jcommon-1.0.0.jar}:\
+    ${file.reference.jfreechart-1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
