--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,10 +27,12 @@ dist.dir=dist
 dist.jar=${dist.dir}/WeightWatchApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.Documents-jfreechart-1.0.1=C:\\Users\\ESIC\\Documents\\jfreechart-1.0.1
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.Documents-jfreechart-1.0.1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
